// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decode input: "" 1`] = `
"{
  \\"items\\": [
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64\\",
      \\"arg\\": \\"\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64 URL Safe\\",
      \\"arg\\": \\"\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"HTML Entities\\",
      \\"arg\\": \\"\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    }
  ]
}"
`;

exports[`decode input: "SGVsbG8=" 1`] = `
"{
  \\"items\\": [
    {
      \\"title\\": \\"Hello\\",
      \\"subtitle\\": \\"Base64\\",
      \\"arg\\": \\"Hello\\",
      \\"valid\\": true
    },
    {
      \\"title\\": \\"Hello\\",
      \\"subtitle\\": \\"Base64 URL Safe\\",
      \\"arg\\": \\"Hello\\",
      \\"valid\\": true
    },
    {
      \\"title\\": \\"SGVsbG8=\\",
      \\"subtitle\\": \\"HTML Entities\\",
      \\"arg\\": \\"SGVsbG8=\\",
      \\"valid\\": true
    }
  ]
}"
`;

exports[`decode input: "https://mozilla.org/?x=%D1%88%D0%B5%D0%BB%D0%BB%D1%8B" 1`] = `
"{
  \\"items\\": [
    {
      \\"title\\": \\"https://mozilla.org/?x=%D1%88%D0%B5%D0%BB%D0%BB%D1%8B\\",
      \\"subtitle\\": \\"HTML Entities\\",
      \\"arg\\": \\"https://mozilla.org/?x=%D1%88%D0%B5%D0%BB%D0%BB%D1%8B\\",
      \\"valid\\": true
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64 URL Safe\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    }
  ]
}"
`;

exports[`decode input: "x" 1`] = `
"{
  \\"items\\": [
    {
      \\"title\\": \\"x\\",
      \\"subtitle\\": \\"HTML Entities\\",
      \\"arg\\": \\"x\\",
      \\"valid\\": true
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64 URL Safe\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    }
  ]
}"
`;

exports[`encode input: "" 1`] = `
"{
  \\"items\\": [
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64\\",
      \\"arg\\": \\"\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64 URL Safe\\",
      \\"arg\\": \\"\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"HTML Entities\\",
      \\"arg\\": \\"\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    }
  ]
}"
`;

exports[`encode input: "Hello" 1`] = `
"{
  \\"items\\": [
    {
      \\"title\\": \\"SGVsbG8=\\",
      \\"subtitle\\": \\"Base64\\",
      \\"arg\\": \\"SGVsbG8=\\",
      \\"valid\\": true
    },
    {
      \\"title\\": \\"SGVsbG8\\",
      \\"subtitle\\": \\"Base64 URL Safe\\",
      \\"arg\\": \\"SGVsbG8\\",
      \\"valid\\": true
    },
    {
      \\"title\\": \\"Hello\\",
      \\"subtitle\\": \\"HTML Entities\\",
      \\"arg\\": \\"Hello\\",
      \\"valid\\": true
    }
  ]
}"
`;

exports[`encode input: "https://mozilla.org/?x=шеллы" 1`] = `
"{
  \\"items\\": [
    {
      \\"title\\": \\"https://mozilla.org/?x=шеллы\\",
      \\"subtitle\\": \\"HTML Entities\\",
      \\"arg\\": \\"https://mozilla.org/?x=шеллы\\",
      \\"valid\\": true
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    },
    {
      \\"title\\": \\"No Result\\",
      \\"subtitle\\": \\"Base64 URL Safe\\",
      \\"icon\\": {
        \\"path\\": \\"/mock/cwd/invalid.png\\"
      },
      \\"valid\\": false
    }
  ]
}"
`;
